--- a/proyecto angular/package.json
+++ b/proyecto angular/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.0",
     "@sweetalert2/ngx-sweetalert2": "^12.4.0",
+    "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "express": "^4.18.2",
     "primer-proyecto": "file:",
     "rxjs": "~7.8.0",
